[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
name = "pidlock"
version = "0.3.0"  # Also update __init__.py
description = "Simple PID based locking for cronjobs, UNIX scripts or python programs"
license = "MIT"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Other Audience",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Topic :: Utilities",
	"Topic :: Software Development",
	"Operating System :: MacOS",
	"Operating System :: Unix",
	"Operating System :: POSIX",
	"Operating System :: Microsoft"
]
homepage = "https://github.com/sayanarijit/pidlock"
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pidlock = "pidlock:pidlock_cli"

[tool.poetry.dependencies]
python = ">=3.6"
psutil = "*"

[tool.poetry.dev-dependencies]
tox = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov"]

[tool.pytest]
addopts = "--cov --cov-report=html --cov-fail-under=100"
